--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
         <div id="win"></div>
         <div id="numbertry"></div>
         <div id="popWord"></div>
+        <div id="missLetter">
+            <p>Lettre utiliser : </p>
+        </div>
 
     </div>
 
     <div id="downContainer">
         <button type="button" id="try">Try</button>
         <button type="button" id="reset">reset</button>
+        <button type="button" id="reload"><a href="./index.html">Reload</a></button>
     </div>
 
     <div id="img"></div>
